feat: upodate meta

--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,18 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1.00001, viewport-fit=cover" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="KiwiDrop Website" />
+  <meta name="description"
+    content="KiwiDrop is a turn-key merchandise & supply solution. We provide a new hassle-free way to sell and grow your retail business for your online stores in multiple platforms." />
+  <meta name="keywords" content="kiwidrop, KiwiDrop, Kiwi Drop, drop shipping" />
+  <meta name="subject" content="KiwiDrop">
+  <meta name="copyright" content="Kiwidrop Inc.">
   <link rel="apple-touch-icon" href="assets/logo512.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
   <link rel="manifest" href="manifest.json" />
-  <title>KiwiDrop</title>
+  <title>KiwiDrop﹘Fashion Supply Chain</title>
 </head>
 
 <body>
@@ -27,10 +31,6 @@
     <a href="robots.txt" style="display: none"></a>
   </noscript>
   <!-- End Trick to copy robots.txt -->
-  <!-- HubSpot Forms -->
-  <!-- <script type="text/javascript" async defer src="//js.hsforms.net/forms/shell.js"></script> -->
-
-  <!-- End of HubSpot Embed Code -->
 
   <script>
     // resolve the old users browser has pwa cache issue
