feat: add facebook image

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,23 @@
   <meta name="keywords" content="kiwidrop, KiwiDrop, Kiwi Drop, drop shipping" />
   <meta name="subject" content="KiwiDrop">
   <meta name="copyright" content="Kiwidrop Inc.">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.kiwidrop.com/">
+  <meta property="og:title" content="KiwiDrop﹘Fashion Supply Chain">
+  <meta property="og:description"
+    content="KiwiDrop is a turn-key merchandise & supply solution. We provide a new hassle-free way to sell and grow your retail business for your online stores in multiple platforms.">
+  <meta property="og:image"
+    content="https://cdn.shopify.com/app-store/listing_images/6d28928219055bec680093a62bed3c09/promotional_image/CP7JoP3xxPoCEAE=.png?height=720&width=1280">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://www.kiwidrop.com/">
+  <meta property="twitter:title" content="KiwiDrop﹘Fashion Supply Chain">
+  <meta property="twitter:description"
+    content="KiwiDrop is a turn-key merchandise & supply solution. We provide a new hassle-free way to sell and grow your retail business for your online stores in multiple platforms.">
+  <meta property="twitter:image"
+    content="https://cdn.shopify.com/app-store/listing_images/6d28928219055bec680093a62bed3c09/promotional_image/CP7JoP3xxPoCEAE=.png?height=720&width=1280">
   <link rel="apple-touch-icon" href="assets/logo512.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
