--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,8 @@
     content="https://cdn.shopify.com/app-store/listing_images/6d28928219055bec680093a62bed3c09/promotional_image/CP7JoP3xxPoCEAE=.png?height=720&width=1280">
 
   <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:card"
+    content="https://cdn.shopify.com/app-store/listing_images/6d28928219055bec680093a62bed3c09/promotional_image/CP7JoP3xxPoCEAE=.png?height=720&width=1280">
   <meta property="twitter:url" content="https://www.kiwidrop.com/">
   <meta property="twitter:title" content="KiwiDrop﹘Fashion Supply Chain">
   <meta property="twitter:description"
@@ -31,6 +32,7 @@
   <meta property="twitter:image"
     content="https://cdn.shopify.com/app-store/listing_images/6d28928219055bec680093a62bed3c09/promotional_image/CP7JoP3xxPoCEAE=.png?height=720&width=1280">
   <link rel="apple-touch-icon" href="assets/logo512.png" />
+  <link rel="canonical" href="https://www.kiwidrop.com/" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
